# job-application-tracker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
app/routers/: applications.py
src/job_tracker/: __init__.py  main.py
src/job_tracker/api/: __init__.py  deps.py
src/job_tracker/api/v1/: __init__.py  applications.py
src/job_tracker/core/: __init__.py  config.py  database.py
src/job_tracker/models/: __init__.py  application.py  base.py
src/job_tracker/schemas/: __init__.py  application.py
src/job_tracker/services/: __init__.py  application.py
